# Scraper

./: .gitignore  .pre-commit-config.yaml  .pytestignore  CHANGELOG.md  PROJECT_PLAN.md  index.html  pyproject.toml  pytest.ini  requirements-dev.txt  tmp_desc.txt
.github/workflows/: ci.yml  release.yml
config/: benefits.yml  compensation.yml  redaction.yml
data/browser_profile/: Local State
data/browser_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
data/browser_profile/GrShaderCache/: data_0  data_1  f_000001  f_000003  f_000005  f_000006  f_000008  f_00000a  f_00000b  f_00000d  index
data/browser_profile/GraphiteDawnCache/: data_1  index
data/sample/: indeed_jobs.json
docs/: architecture.md  migration_playbook.md  release_process.md
jobminer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scraper/: README.md  __init__.py  requirements.txt
scraper/config/: company_map.yml  matching.yml  runtime.yml  searches.yml  seed_skills.txt  semantic.yml  skills_seed.txt  sources.yml  weights.yml
scraper/data/: db.sqlite
scraper/exports/: responsibility_matches_20250912_161434.xlsx
scraper/jobminer/: __init__.py  anomaly.py  benefits.py  collector.py  comp_norm.py  compliance.py  db.py  dedupe.py  enrich.py  exporter.py  history.py  logging_config.py  models.py  pipeline.py  redaction.py  responsibility_match.py  resume.py  scoring.py  semantic_enrich.py  semantic_toggle.py  settings.py  skill_profile_cache.py  skills.py  weights.py
scraper/logs/: collector.events.jsonl  collector.log.1  collector.log.2
scraper/scripts/: __init__.py  benchmark_semantic.py  clear_caches.py  daily_snapshot.py  export_matches.py  generate_dashboard.py  job_cli.py  maint_db.py  run_backfill_descriptions.py  run_backfill_location_posted.py  run_backfill_salary.py  run_collect.py  run_export.py  run_ingest.py  run_mock_import.py  run_pipeline.py  run_pipeline_all.py  run_retro_enrich.py  run_score.py  summarize_history.py  trim_skill_cache.py  weekly_summary.py
scraper/tests/: conftest.py  test_anomaly_detection.py  test_branch_coverage.py  test_cache_trim.py  test_comp_norm.py  test_compliance.py  test_consolidated_pipeline.py  test_daily_snapshot.py  test_dedupe_refinement.py  test_enrichment.py  test_explanations_export.py  test_exporter_duplicates.py  test_generate_dashboard.py  test_history_append.py  test_import_performance.py  test_location_fuzz.py  test_location_posted.py  test_parallel_extraction.py  test_posted_time_parse.py  test_property_skills.py  test_redaction.py  test_resume_profile_cache.py  test_run_summary.py  test_salary_parsing.py  test_schema_version.py  test_scoring.py  test_scoring_f1.py  test_semantic_toggle.py  test_skill_cache.py  test_status_history.py  test_streaming_export.py  test_summary_distribution.py  test_weekly_summary.py  test_weights_config.py
scraper/web/: index.html  server.py
scripts/: coverage_badge.py  lint_typecheck.ps1  run_daily_monitor.ps1  run_weekly_summary.ps1  test_fast.ps1  test_flaky.ps1  update_next_step.py
scripts/tasks/: daily_monitor.xml  weekly_summary.xml
tests/: test_adzuna_source.py  test_benchmark_semantic.py  test_fuzz_resume.py  test_greenhouse_lever_sources.py  test_indeed_source.py  test_multi_source_ingest.py  test_semantic_config.py  test_semantic_enrichment.py
(+872 files in other folders)
